[FIX] Post/emailVerification - 링크를 통해 접근하는 경우 토큰전달이 불가능 -> 인증 코드를 복사 붙여넣기 하는 방식으로

--- a/src/main/resources/templates/mail/simple-link.html
+++ b/src/main/resources/templates/mail/simple-link.html
@@ -11,9 +11,9 @@
     <h2 th:text="${message}">메시지</h2>
 
     <div>
-        <a th:href="${host + link}" th:text="${linkName}">Link</a>
-        <p>링크가 동작하지 않는 경우에는 아래 URL을 웹브라우저에 복사해서 붙여 넣으세요.</p>
-        <small th:text="${host + link}"></small>
+        <small th:text="${token}"></small>
+        <p>해당 코드를 웹브라우저에 복사해서 붙여 넣으세요.</p>
+
     </div>
 </div>
 <footer>
